test/good/96.zlus

let node f x = y where
  rec automaton
      | S0 -> do y = 0 unless (x <= 3) then S0

