test/bad/47.zlus
let node f() = i where rec next i = i
